next variant (3) with server with several models defined in parameter file